[package]
name = "zeco"
version = "0.1.0"
edition = "2024"

authors = ["Julian Büttner <git@julianbuettner.dev>"]
license = "MIT"
repository = "https://github.com/julianbuettner/swapvec"
readme = "README.md"
description = "zellij attach via the internet, peer to peer, end-to-end encrypted"

[dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
clap = { version = "4.5.27", features = ["derive"] }
iroh = "0.31.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["net"] }
users = "0.11.0"
