[package]
name = "zeco"
version = "0.3.0"
edition = "2021"

authors = ["Julian Büttner <git@julianbuettner.dev>"]
license = "MIT"
repository = "https://github.com/julianbuettner/swapvec"
readme = "README.md"
description = "zellij attach via the internet, peer to peer, end-to-end encrypted"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
iroh = "0.90.0"
rand = "0.8.5"
zellij-utils = "0.42.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["net"] }
users = "0.11.0"
